# Almux-Cybernet

./: README.md  buildandprogram.sh
Hardware/: BOM_RPB2026_RPB2026PCB_2026-03-18.xlsx  PickAndPlace_RPB2026PCB_2026-03-18.xlsx  Propj-AlmuxCybernet.epro
Software/: IOmanager.c
Software/io/: IOmanager.c  makefile  programmer.py
Software/main/: CMakeLists.txt  core-main.c  core_video.c  font8x8.h  shared_protocol.h  tusb-config.h  tusb_config.h
